k8s/apps/meow/flood/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flood
  labels:
    app: flood
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: flood
  template:
    metadata:
      labels:
        app: flood
    spec:
      containers:
        - name: flood
          image: jesec/flood:4.16.1
          imagePullPolicy: IfNotPresent
          args:
            - --allowedpath
            - /data
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: flood-config
              mountPath: /config
            - name: flood-data
              mountPath: /data
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              memory: 256Mi
      volumes:
        - name: flood-config
          persistentVolumeClaim:
            claimName: flood-config
        - name: flood-data
          persistentVolumeClaim:
            claimName: flood-data
