k8s/apps/meow/flood/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: flood
spec:
  type: ClusterIP
  selector:
    app: flood
  ports:
    - name: http
      port: 80
      targetPort: 3000
