k8s/apps/meow/flood/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flood
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`downloads.meow.litarvan.com`)
      services:
        - name: flood
          port: http
