k8s/apps/meow/flood/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flood
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: downloads.meow.litarvan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flood
                port:
                  name: http
  tls:
    - hosts:
        - downloads.meow.litarvan.dev
      secretName: downloads-meow-tls
